fix: revert acc-content class

--- a/vichy/3337875920971/index.html
+++ b/vichy/3337875920971/index.html
@@ -220,7 +220,7 @@
 					<img src="{{base_url}}vichy/3337875920971images/plus.png"
 							 alt=""
 							 class="es-acc-tab__image">
-					<div class="es-accordion__element-content">
+					<div class="es-accordion__element-content acc-content">
 						<p>
 							<br><br><br>
 							Pierwsza ultra-regenerująca rutyna pielęgnacyjna DERCOS do włosów i skóry głowy. Wzbogacona o kwas
@@ -238,7 +238,7 @@
 					<img src="{{base_url}}vichy/3337875920971images/plus.png"
 							 alt=""
 							 class="es-acc-tab__image">
-					<div class="es-accordion__element-content">
+					<div class="es-accordion__element-content acc-content">
 						<p>
 							<br><br><br>
 							Aby skutecznie działać przeciw wypadaniu włosów z powodu łamliwości, kluczowe są odpowiednie
@@ -265,7 +265,7 @@
 					<img src="{{base_url}}vichy/3337875920971images/plus.png"
 							 alt=""
 							 class="es-acc-tab__image">
-					<div class="es-accordion__element-content">
+					<div class="es-accordion__element-content acc-content">
 						<p>
 							<br><br><br>
 							KROK 1: Na mokre włosy i skórę głowy nałóż KURACJĘ i pozostaw na 5 minut. Nie spłukuj.<br>
